[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/noto_sans_regular_data.tres" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/message_backdrop.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="MessageBackdrop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 662, -176 )
script = ExtResource( 2 )

[node name="Backdrop" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0, 0, 0, 0.501961 )

[node name="MessageContent" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MessageLbl" type="Label" parent="MessageContent"]
margin_left = 400.0
margin_top = 217.0
margin_right = 400.0
margin_bottom = 262.0
custom_fonts/font = SubResource( 1 )

[connection signal="hide_backdrop" from="." to="." method="_on_hide_backdrop"]
[connection signal="hide_backdrop_message" from="." to="." method="_on_hide_backdrop_message"]
[connection signal="show_backdrop" from="." to="." method="_on_show_backdrop"]
[connection signal="show_backdrop_message" from="." to="." method="_on_show_backdrop_message"]
